[package]
name = "notifier"
version = "0.1.0"
license = "MIT OR Apache-2.0"
authors = ["Alec Mocatta <alec@mocatta.net>"]
categories = ["development-tools","network-programming"]
keywords = ["poll","epoll","kqueue","socket"]
description = """
A wrapper around platform event notification APIs that can also handle high-resolution timer events, including those set (on another thread) during a `notifier.wait()` call.
"""
repository = "https://github.com/alecmocatta/notifier"
homepage = "https://github.com/alecmocatta/notifier"
documentation = "https://docs.rs/notifier/0.1.0"
readme = "README.md"
edition = "2018"

[badges]
azure-devops = { project = "alecmocatta/notifier", pipeline = "tests" }
maintenance = { status = "actively-developed" }

[dependencies]
log = "0.4"
mio = "0.6"
either = "1.5"
palaver = { version = "0.1" } #, path = "../palaver" }
tcp_typed = { version = "0.1", optional = true } #, path = "../tcp_typed" }

[target.'cfg(unix)'.dependencies]
nix = "0.14"

[target.'cfg(windows)'.dependencies]
winapi = "0.3"

[package.metadata.docs.rs]
features = [ "tcp_typed" ]
